--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,24 +31,40 @@
 #home-hero {
   position:relative;
   background: #7f7fd5; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #91eae4,
-    #86a8e7,
-    #7f7fd5
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    $primary,
-    $secondary
-  );
+  // background: -webkit-linear-gradient(
+  //   to right,
+  //   #91eae4,
+  //   #86a8e7,
+  //   #7f7fd5
+  // ); /* Chrome 10-25, Safari 5.1-6 */
+  // background: linear-gradient(
+  //   to right,
+  //   $primary,
+  //   $secondary
+  // );
+  background-color: $white;
+  .hero-image-container {
+    min-width:300px;
+    max-width: 400px;
+    > div {
+      position: unset !important;
+    }
+
+    .image {
+    object-fit: cover;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+    }
+  }
+  
 
  
   #scroll-btn {
     position: absolute;
     bottom:24px;
-    left: 50%;
-    text-transform: translatex(-50%);
+    right: 24px;
+    // text-transform: translatex(-50%);
     animation: scrollBtn 5s  linear infinite;
   }
 }
