--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,65 +1,69 @@
 @import "./_variables";
+@import "./_global-tailwind.css";
 @import "./_typography";
 
+body {
+  background-color: #fff;
+
+  &.dark {
+    background-color: #000;
+  }
+}
+
 .header-margin {
-  margin-top:86px !important;
+  margin-top: 86px !important;
 }
 
 @keyframes scrollBtn {
-  0%{
+  0% {
     transform: translatey(0);
   }
 
   12% {
     transform: translatey(-12px);
-
-
   }
-  25%{
+  25% {
     transform: translatey(0);
   }
 
-  50%{
+  50% {
     transform: translatey(0);
   }
 
   100% {
     transform: translatey(0);
-
   }
 }
 
 #layout-content {
   max-width: 1440px;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 #home-hero {
-  position:relative; 
-  background-color: $white;
+  position: relative;
+  // background-color: $black;
   .hero-image-container {
-    min-width:300px;
+    min-width: 300px;
     max-width: 400px;
     > div {
       position: unset !important;
     }
 
     .image {
-    object-fit: cover;
-    width: 100% !important;
-    position: relative !important;
-    height: unset !important;
+      object-fit: cover;
+      width: 100% !important;
+      position: relative !important;
+      height: unset !important;
     }
   }
-  
 
- 
   #scroll-btn {
     position: absolute;
-    bottom:24px;
+    bottom: 24px;
     right: 24px;
     // text-transform: translatex(-50%);
-    animation: scrollBtn 4s  linear infinite;
+    animation: scrollBtn 4s linear infinite;
   }
 }
 
@@ -74,8 +78,8 @@
   align-items: center;
   padding: 24px;
   z-index: 10;
-  border-bottom: 2px solid $black;
-  background-color: rgba(255, 255, 255, 0.45);
+  // border-bottom: 2px solid $black;
+  // background-color: rgba(255, 255, 255, 0.45);
   backdrop-filter: blur(10px);
   position: relative;
   z-index: 99999999999;
@@ -83,7 +87,7 @@
   .left-icon {
     a {
       text-decoration: none;
-      color: $black;
+      // color: $white;
       //   font-family: $Sahar-SemiBold;
       font-size: 24px;
       img {
@@ -95,15 +99,18 @@
 
   #nav {
     display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
 
     .nav-menu {
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: left;
-      background: $black;
+      // background: $black;
+
       box-shadow: none !important;
-      border-left: 2px solid $black;
+      border-left: 2px solid #000;
       height: 100vh;
       width: 300px;
       padding: 2rem;
@@ -113,8 +120,8 @@
       transform: translateX(100%);
       transition: all 0.5s 0.5s;
       z-index: 0;
-      background-color: $white;
-      color: $black;
+      // background-color: $black;
+      color: $white;
 
       @media screen and (max-width: $sm) {
         width: 100%;
@@ -134,7 +141,7 @@
         img {
           width: 50px;
           margin: 0 12px;
-          color: $black;
+          color: $white;
         }
         .content {
           display: flex;
@@ -155,7 +162,7 @@
         // font-family: $Sahar-Bold;
         $white-space: nowrap;
         text-decoration: none;
-        color: $black;
+        color: $white;
         margin-bottom: 24px;
         @media screen and (max-width: 768px) {
           font-size: 32px;
@@ -173,12 +180,16 @@
         content: "";
       }
     }
+    .main-nav-menu {
+      // background-color: #000000;
+      background-image: $svgBg;
+    }
     .fake-back {
-      background-color: $black !important;
+      background-color: $white !important;
       transition-delay: 0.1s;
     }
     .fake-mid {
-      background-color: $primary;
+      // background-color: $primary;
       transition-delay: 0.3s;
     }
 
@@ -208,7 +219,7 @@
       div {
         width: 2rem;
         height: 2px;
-        background: $black;
+        // background: $white;
         transition: all 0.3s linear;
         position: relative;
         transform-origin: 1px;
