--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -1,34 +1,36 @@
 @tailwind base;
 
 @layer base {
-
-  h1, h2, h3, h4, h5, h6 {
-    @apply font-bold;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold text-black dark:text-white transition-all duration-300;
   }
-    h1 {
-      @apply text-4xl md:text-6xl ;
-
-    }
-    h2 {
-      @apply text-4xl;
-    }
-    h3 {
-      @apply text-3xl;
-    }
-    h4 {
-      @apply text-2xl;
-    }
-    h5 {
-      @apply text-xl;
-    }
-    h6 {
-      @apply text-lg;
-    }
-    p {
-      @apply text-base;
-    }
-    a{
-      @apply font-bold;
-    }
+  h1 {
+    @apply text-4xl md:text-6xl;
   }
-  
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  h4 {
+    @apply text-2xl;
+  }
+  h5 {
+    @apply text-xl;
+  }
+  h6 {
+    @apply text-lg;
+  }
+  p {
+    @apply text-base text-gray-600 dark:text-gray-400 mb-2;
+  }
+  a {
+    @apply font-bold dark:text-white;
+  }
+}
