--- a/styles/global.scss
+++ b/styles/global.scss
@@ -42,7 +42,7 @@ body {
 
 #home-hero {
   position: relative;
-  // background-color: $black;
+  min-height: -webkit-fill-available;
   .hero-image-container {
     min-width: 300px;
     max-width: 400px;
