--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,24 +14,47 @@ body {
   margin-top: 86px !important;
 }
 
+// @keyframes scrollBtn {
+//   0% {
+//     transform: translatey(0);
+//   }
+
+//   12% {
+//     transform: translatey(-12px);
+//   }
+//   25% {
+//     transform: translatey(0);
+//   }
+
+//   50% {
+//     transform: translatey(0);
+//   }
+
+//   100% {
+//     transform: translatey(0);
+//   }
+// }
 @keyframes scrollBtn {
   0% {
-    transform: translatey(0);
+    transform: translate(-50%, 0);
   }
+  10% {
+    transform: translate(-50%, -15px);
+  }
+  20% {
+    transform: translate(-50%, 0);
+  }
+}
 
-  12% {
-    transform: translatey(-12px);
+@-webkit-keyframes scrollBtn {
+  0% {
+    transform: translate(-50%, 0);
   }
-  25% {
-    transform: translatey(0);
+  10% {
+    transform: translate(-50%, -15px);
   }
-
-  50% {
-    transform: translatey(0);
-  }
-
-  100% {
-    transform: translatey(0);
+  20% {
+    transform: translate(-50%, 0);
   }
 }
 
@@ -61,9 +84,12 @@ body {
   #scroll-btn {
     position: absolute;
     bottom: 24px;
-    right: 24px;
+    // right: 24px;
+    left: 50%;
+    transform: translate(-50%, 0);
     // text-transform: translatex(-50%);
-    animation: scrollBtn 4s linear infinite;
+    animation: scrollBtn 1.5s linear infinite;
+    -webkit-animation: scrollBtn 1.5s linear infinite;
   }
 }
 
@@ -208,6 +234,7 @@ body {
       height: 2rem;
       background: transparent;
       border: none;
+      border-radius: 8px;
       cursor: pointer;
       padding: 0;
       z-index: 10;
