--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -28,7 +28,7 @@
     @apply text-lg;
   }
   p {
-    @apply text-base text-gray-600 dark:text-gray-400 mb-4;
+    @apply text-base text-gray-600 dark:text-gray-400;
   }
   a {
     @apply font-bold dark:text-white;
