--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -7,28 +7,28 @@
   h4,
   h5,
   h6 {
-    @apply font-bold text-black dark:text-white transition-all duration-300;
+    @apply font-serif font-bold text-black dark:text-white transition-all duration-300;
   }
   h1 {
     @apply text-4xl md:text-6xl;
   }
   h2 {
-    @apply text-4xl;
-  }
-  h3 {
     @apply text-3xl;
   }
-  h4 {
+  h3 {
     @apply text-2xl;
   }
-  h5 {
+  h4 {
     @apply text-xl;
   }
-  h6 {
+  h5 {
     @apply text-lg;
   }
+  h6 {
+    @apply text-base;
+  }
   p {
-    @apply text-base text-gray-600 dark:text-gray-400;
+    @apply text-base md:text-lg font-body text-gray-600 dark:text-gray-400;
   }
   a {
     @apply font-bold dark:text-white;
