--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,6 +4,7 @@
 
 body {
   background-color: #fff;
+  scroll-behavior: smooth;
 
   &.dark {
     background-color: #000;
@@ -66,6 +67,10 @@ body {
 #home-hero {
   position: relative;
   min-height: -webkit-fill-available;
+  @media only screen and (max-device-width: 768px) {
+    height: -webkit-fill-available;
+  }
+
   .hero-image-container {
     min-width: 300px;
     max-width: 400px;
