--- a/styles/global.scss
+++ b/styles/global.scss
@@ -66,7 +66,7 @@ body {
 
 #home-hero {
   position: relative;
-  min-height: -webkit-fill-available;
+  min-height: 100vh;
   @media only screen and (max-device-width: 768px) {
     height: -webkit-fill-available;
   }
