hero height fix

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,9 +2,14 @@
 @import "./_global-tailwind.css";
 @import "./_typography";
 
+html {
+  height: -webkit-fill-available;
+}
 body {
   background-color: #fff;
   scroll-behavior: smooth;
+  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 
   &.dark {
     background-color: #000;
@@ -66,10 +71,11 @@ body {
 
 #home-hero {
   position: relative;
-  min-height: 100vh;
-  @media only screen and (max-device-width: 768px) {
-    height: -webkit-fill-available;
-  }
+  // min-height: -webkit-fill-available;
+
+  // @media only screen and (max-device-width: 768px) {
+  //   height: -webkit-fill-available;
+  // }
 
   .hero-image-container {
     min-width: 300px;
