--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,39 +2,7 @@
 @import "./_global-tailwind.css";
 @import "./_typography";
 
-body {
-  background-color: #fff;
-  scroll-behavior: smooth;
-
-  &.dark {
-    background-color: #000;
-  }
-}
-
-.header-margin {
-  margin-top: 86px !important;
-}
-
-// @keyframes scrollBtn {
-//   0% {
-//     transform: translatey(0);
-//   }
-
-//   12% {
-//     transform: translatey(-12px);
-//   }
-//   25% {
-//     transform: translatey(0);
-//   }
-
-//   50% {
-//     transform: translatey(0);
-//   }
-
-//   100% {
-//     transform: translatey(0);
-//   }
-// }
+//animations
 @keyframes scrollBtn {
   0% {
     transform: translate(-50%, 0);
@@ -59,6 +27,19 @@ body {
   }
 }
 
+body {
+  background-color: #fff;
+  scroll-behavior: smooth;
+
+  &.dark {
+    background-color: #000;
+  }
+}
+
+.header-margin {
+  margin-top: 86px !important;
+}
+
 #layout-content {
   max-width: 1440px;
   margin: 0 auto;
@@ -67,10 +48,6 @@ body {
 #home-hero {
   position: relative;
   height: 100vh -webkit-fill-available;
-
-  // @media only screen and (max-device-width: 768px) {
-  //   height: -webkit-fill-available;
-  // }
 
   .hero-image-container {
     min-width: 300px;
@@ -114,8 +91,7 @@ body {
   align-items: center;
   padding: 24px;
   z-index: 10;
-  // border-bottom: 2px solid $black;
-  // background-color: rgba(255, 255, 255, 0.45);
+
   backdrop-filter: blur(10px);
   position: relative;
   z-index: 99999999999;
@@ -123,8 +99,6 @@ body {
   .left-icon {
     a {
       text-decoration: none;
-      // color: $white;
-      //   font-family: $Sahar-SemiBold;
       font-size: 24px;
       img {
         width: 75px;
@@ -156,7 +130,6 @@ body {
       transform: translateX(100%);
       transition: all 0.5s 0.5s;
       z-index: 0;
-      // background-color: $black;
       color: $white;
 
       @media screen and (max-width: $sm) {
@@ -195,7 +168,6 @@ body {
       }
       a {
         font-size: 28px;
-        // font-family: $Sahar-Bold;
         $white-space: nowrap;
         text-decoration: none;
         color: $white;
@@ -217,7 +189,6 @@ body {
       }
     }
     .main-nav-menu {
-      // background-color: #000000;
       background-image: $svgBg;
     }
     .fake-back {
@@ -225,7 +196,6 @@ body {
       transition-delay: 0.1s;
     }
     .fake-mid {
-      // background-color: $primary;
       transition-delay: 0.3s;
     }
 
