--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -32,6 +32,6 @@
     @apply text-base md:text-lg font-body leading-5 text-gray-600 dark:text-gray-400;
   }
   a {
-    @apply font-bold dark:text-white;
+    @apply font-bold text-black dark:text-white;
   }
 }
