--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -10,13 +10,13 @@
     @apply font-serif font-bold text-black dark:text-white transition-all duration-300;
   }
   h1 {
-    @apply text-4xl md:text-6xl;
+    @apply text-4xl md:text-6xl leading-10;
   }
   h2 {
-    @apply text-3xl;
+    @apply text-2xl leading-10;
   }
   h3 {
-    @apply text-2xl;
+    @apply text-xl leading-10;
   }
   h4 {
     @apply text-xl;
@@ -29,9 +29,12 @@
   }
   p,
   li {
-    @apply text-base md:text-lg font-body leading-5 text-gray-600 dark:text-gray-400;
+    @apply text-lg font-body leading-8 text-gray-700 dark:text-gray-200 transition-all duration-200;
+  }
+  .meta {
+    @apply text-xs leading-6;
   }
   a {
-    @apply font-bold text-black dark:text-white;
+    @apply text-primary underline leading-8 cursor-pointer;
   }
 }
