--- a/styles/_typography.css
+++ b/styles/_typography.css
@@ -7,10 +7,10 @@
   h4,
   h5,
   h6 {
-    @apply font-serif font-bold text-black dark:text-white transition-all duration-300;
+    @apply font-serif font-medium text-black dark:text-white transition-all duration-200;
   }
   h1 {
-    @apply text-4xl md:text-6xl leading-10;
+    @apply text-4xl leading-10;
   }
   h2 {
     @apply text-2xl leading-10;
@@ -29,12 +29,12 @@
   }
   p,
   li {
-    @apply text-lg font-body leading-8 text-gray-700 dark:text-gray-400 transition-all duration-200;
+    @apply text-lg font-body  font-light leading-8 text-gray-700 dark:text-gray-200 transition-all duration-200;
   }
   .meta {
     @apply text-xs leading-6;
   }
   a {
-    @apply text-primary font-bold underline leading-8 cursor-pointer;
+    @apply text-primaryDark dark:text-primary font-medium underline leading-8 cursor-pointer;
   }
 }
