Updated nextjs version

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -56,7 +56,7 @@ body {
       min-width: 220px;
       max-width: 250px;
     }
-    > div {
+    > span {
       position: unset !important;
     }
 
